# protoc-gen-validate

./: BUILD  Makefile  WORKSPACE
module/: BUILD
templates/: BUILD.bazel
templates/cc/: BUILD.bazel
templates/go/: BUILD.bazel
templates/gogo/: BUILD.bazel
templates/goshared/: BUILD.bazel  msg.go  register.go
templates/shared/: BUILD.bazel
tests/harness/: BUILD
tests/harness/cases/: BUILD
tests/harness/cases/other_package/: BUILD
tests/harness/executor/: BUILD
tests/harness/go/main/: BUILD
validate/: BUILD
