load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "duration.go",
        "file.go",
        "register.go",
        "required.go",
        "timestamp.go",
    ],
    importpath = "github.com/lyft/protoc-gen-validate/templates/gogo",
    visibility = ["//visibility:public"],
    deps = [
        "//templates/goshared:go_default_library",
        "@com_github_lyft_protoc_gen_star//:go_default_library",
    ],
)
